DefenceShooter.class  - Updated Math.max method with Math.clamp method